Add 5-day weather forecast feature with UI updates
Introduces a 5-day weather forecast section, including new forecast card styles in CSS, a forecast container in index.html, and logic in api.js to fetch, process, and display forecast data from the OpenWeatherMap API. The forecast section is shown or hidden alongside other weather cards, and is responsive for mobile devices.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,21 @@
                             </div>
                         </div>
                     </div>
+                    <div class="tempForNextDays d-flex flex-column gap-4 weather-hidden" id="tempForNextDays">
+                        <div class="row justify-content-center">
+                            <div class="col-12 px-2">
+                                <div class="text-center border rounded p-3 information forecast-container">
+                                    <h3 class="mb-4">
+                                        <i class="bi bi-calendar-week text-primary"></i> 
+                                        Temperature for Next 5 Days
+                                    </h3>
+                                    <div id="forecastCards" class="d-flex flex-wrap justify-content-center gap-3">
+                                        <!-- Forecast cards will be dynamically generated here -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
